--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,14 @@
     <meta charset="utf-8" />
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="//rawgit.com/mrdoob/stats.js/master/build/stats.min.js"></script>
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+     <!-- favicons -->
+  <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/favicons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%//favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%//favicons/favicon-16x16.png">
+  <link rel="manifest" href="%PUBLIC_URL%//site.webmanifest">
+  <link rel="mask-icon" href="%PUBLIC_URL%//safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
 
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 
@@ -15,7 +22,7 @@
       content="Web site created using create-react-app"
     />
     
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -30,7 +37,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Aradox Media</title>
   </head>
   <body>
    
@@ -405,11 +412,7 @@ if (!window.matchMedia("(prefers-reduced-motion: reduce)").matches) {
     orb.render();
   });
 }
-document.getElementById('main').style.height=document.getElementsByClassName('orb-canvas')[0].height.toString()+"px"
 
-  window.addEventListener("resize",()=>{
-    document.getElementById('main').style.height=document.getElementsByClassName('orb-canvas')[0].height.toString()+"px"
-})
 
 /* Set width of all animated text to match container */
 let parent = document.querySelectorAll('.animate-text');
